provided correct path

--- a/my-app/buildspec.yml
+++ b/my-app/buildspec.yml
@@ -7,13 +7,13 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn test 
+      - mvn test -f my-app/pom.xml
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn package
+      - mvn package -f my-app/pom.xml
 artifacts:
   files:
-    - target/my-app-1.0-SNAPSHOT.jar
-    - appspec.yml
+    - my-app/target/my-app-1.0-SNAPSHOT.jar
+    - my-app/appspec.yml
   discard-paths: yes
